package com.dungeons.and.dragons;

public enum CharacterClass {
    WARRIOR,
    WIZARD,
    ROGUE,
    CLERIC
}
