package com.dungeons.and.dragons;

public abstract class Item {
    private String name;
    private String description;
    private double weight;

    public abstract void use();
}
