package com.dungeons.and.dragons;

import java.util.ArrayList;
import java.util.List;

public class Player {
    private Character character;
    private List<Item> inventory;

    public Player(String playerName, CharacterClass characterClass) {
        this.character = new Character(playerName, characterClass);
        this.inventory = new ArrayList<>();
    }

    public void getCharacter(){
        // Implementation
    }

    public void equip(Item item) {
        if (item instanceof Weapon) {
            character.attack();
        } else if (item instanceof Armor) {
            character.defend();
        }
        // Other equip logic for different item types
    }

    public void engageInCombat(Creature target) {
        // Logic for player engaging in combat with a creature
        // This could involve calling attack and defend methods on the player and creature
    }

    public void useConsumable(Consumable consumable) {
        consumable.use();
        // Additional logic for using consumable items
    }

    public void usePotion() {
        // Implementation
    }

    public void learnSpell(Spell spell) {
        // Implementation
    }

    public void castSpell(Creature target) {
        // Implementation
    }
}