package com.dungeons.and.dragons;

public interface SpellCaster {
    void castSpell(Creature target);
}
